Revert "AOT"
This reverts commit 5d04c70b57290025bcbd4d21f3de2d25d4fe35af.